# uav-spoofing

./: .gitignore  CHECKPOINT_SHA256.txt  README.md  pyproject.toml  reproduce_all.sh  requirements.txt
docs/: SETUP.md  design.md
experiments/: common.py  mc.py
experiments/stage1_kalman/: _runner.py  exp1_trajectory_tracking.py  exp2_error_analysis.py  exp3_consistency.py
experiments/stage2_mpc/: _runner.py  exp1_trajectory_following.py  exp2_control_effort.py  exp3_constraint_satisfaction.py
experiments/stage3_detection/: _runner.py  exp1_false_positive_rate.py  exp2_detection_rate.py
experiments/stage4_attack/: _runner.py  exp1_attack_success.py  exp2_stealthiness.py  exp3_destination_deviation.py  exp4_tradeoff_study.py
src/uav_spoof/: __init__.py
src/uav_spoof/attack/: __init__.py  evasive.py
src/uav_spoof/control/: __init__.py  mpc.py
src/uav_spoof/detection/: chi_square.py
src/uav_spoof/estimation/: __init__.py  kalman.py
src/uav_spoof/simulation/: dynamics.py
src/uav_spoof/visualization/: plotting.py
tests/: test_attack.py  test_detection.py  test_dynamics.py  test_kalman.py  test_mc.py  test_mpc.py
